--- a/bower.json
+++ b/bower.json
@@ -11,7 +11,10 @@
     "angular-resource": "^1.3.0",
     "angular-route": "^1.3.0",
     "angular-sanitize": "^1.3.0",
-    "angular-touch": "^1.3.0"
+    "angular-touch": "^1.3.0",
+    "jquery": "~2.1.3",
+    "spectrum": "~1.6.0",
+    "angular-spectrum-colorpicker": "~1.3.5"
   },
   "devDependencies": {
     "angular-mocks": "~1.3.0",
